# quizMe

./: README.md  licence.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
src/: backend_applications.py  cli_interface.py  gui.py  main.py
src/quizme/: backend_applications.py  gui.py  main.py
